--- a/.github/workflow/release.yml
+++ b/.github/workflow/release.yml
@@ -2,7 +2,11 @@ name: Release
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
+      - test
+      - live
+  workflow_dispatch:
 
 jobs:
   build-test-and-release:
