--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,24 +30,16 @@ jobs:
           sudo mv ./git-chglog /usr/local/bin/git-chglog
       - name: Calculate next version tag
         id: nextver
-        uses: mathieudutour/github-tag-action@v5.6
+        uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: minor
       - name: Generate changelog
-        id: changelog
         run: git-chglog --next-tag ${{ steps.nextver.outputs.new_tag }} > CHANGELOG.md
-      - name: Create GitHub App Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ vars.APP_ID }}
-          private-key: ${{ secrets.PRIVATE_KEY }}
       - name: Create Release
-        id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.nextver.outputs.new_tag }}
           release_name: Release ${{ steps.nextver.outputs.new_tag }}
