--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,19 +28,35 @@ jobs:
           curl -sL https://github.com/git-chglog/git-chglog/releases/download/v0.15.0/git-chglog_linux_amd64 -o git-chglog
           chmod +x ./git-chglog
           sudo mv ./git-chglog /usr/local/bin/git-chglog
+      - name: Create GitHub App Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
       - name: Calculate next version tag
         id: nextver
-        uses: mathieudutour/github-tag-action@v6.1
+        uses: mathieudutour/github-tag-action@v5.6
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ steps.app-token.outputs.token }}
           default_bump: minor
       - name: Generate changelog
         run: git-chglog --next-tag ${{ steps.nextver.outputs.new_tag }} > CHANGELOG.md
       - name: Create Release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
           tag_name: ${{ steps.nextver.outputs.new_tag }}
           release_name: Release ${{ steps.nextver.outputs.new_tag }}
-          body_path: CHANGELOG.md
+          body: |
+            ## Release Note
+            This is the release note for version ${{ steps.nextver.outputs.new_tag }}.
+            
+            ### Changes
+            - Added new features
+            - Fixed bugs
+            - Improved performance
+            
+            ### Changelog
+            ${{ steps.changelog.outputs.changelog }}
