--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,51 +12,50 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # fetch all history for all tags and branches
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.22'
-          check-latest: true
-      - name: Run tests
-        run: go test ./...
-      - name: Install git-chglog
-        run: |
-          curl -sL https://github.com/git-chglog/git-chglog/releases/download/v0.15.0/git-chglog_linux_amd64 -o git-chglog
-          chmod +x ./git-chglog
-          sudo mv ./git-chglog /usr/local/bin/git-chglog
-      - name: Create GitHub App Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ vars.APP_ID }}
-          private-key: ${{ secrets.PRIVATE_KEY }}
-      - name: Calculate next version tag
-        id: nextver
-        uses: mathieudutour/github-tag-action@v5.6
-        with:
-          github_token: ${{ steps.app-token.outputs.token }}
-          default_bump: minor
-      - name: Generate changelog
-        run: git-chglog --next-tag ${{ steps.nextver.outputs.new_tag }} > CHANGELOG.md
-      - name: Create Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-        with:
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 # fetch all history for all tags and branches
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.22'
+        check-latest: true
+
+    - name: Run tests
+      run: go test ./...
+
+    - name: Install git-chglog
+      run: |
+        curl -sL https://github.com/git-chglog/git-chglog/releases/download/v0.15.0/git-chglog_linux_amd64 -o git-chglog
+        chmod +x ./git-chglog
+        sudo mv ./git-chglog /usr/local/bin/git-chglog
+
+    - name: Generate changelog
+      id: changelog
+      run: git-chglog --next-tag ${{ steps.nextver.outputs.new_tag }} > CHANGELOG.md
+
+    - name: Create GitHub App Token
+      uses: actions/create-github-app-token@v1
+      id: app-token
+      with:
+        app-id: ${{ vars.APP_ID }}
+        private-key: ${{ secrets.PRIVATE_KEY }}
+
+    - name: Calculate next version tag
+      id: nextver
+      uses: mathieudutour/github-tag-action@v5.6
+      with:
+        github_token: ${{ steps.app-token.outputs.token }}
+        default_bump: minor
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+      with:
           tag_name: ${{ steps.nextver.outputs.new_tag }}
           release_name: Release ${{ steps.nextver.outputs.new_tag }}
-          body: |
-            ## Release Note
-            This is the release note for version ${{ steps.nextver.outputs.new_tag }}.
-            
-            ### Changes
-            - Added new features
-            - Fixed bugs
-            - Improved performance
-            
-            ### Changelog
-            ${{ steps.changelog.outputs.changelog }}
+          body_path: CHANGELOG.md
