--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,23 +2,25 @@ name: PR-Test
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build-test-and-release:
     name: Test
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0 # fetch tags
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # fetch tags
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.22'
-        check-latest: true
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.22"
+          check-latest: true
 
-    - name: Run tests
-      run: go test ./...
+      - name: Run tests
+        run: go test ./...
+        env:
+          TEST_ETH_RPC_URL: "https://eth.public-rpc.com"
