fix: readjust test, codecov pipeline for every pr

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,15 @@ jobs:
           check-latest: true
 
       - name: Run tests
-        run: go test ./...
+        run: go test ./... -coverprofile=coverage.txt
         env:
           TEST_ETH_RPC_URL: "https://eth.public-rpc.com"
+      
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.txt
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: true
