--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Run tests
         run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic
         env:
-          TEST_ETH_RPC_URL: "https://eth.public-rpc.com"
-      
+          TEST_ETH_RPC_URL: ${{ secrets.TEST_ETH_RPC_URL }}
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
@@ -34,3 +34,4 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: true
           verbose: true
+
