--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,41 +12,42 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0 # fetch tags
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # fetch tags
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.22'
-        check-latest: true
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.22"
+          check-latest: true
 
-    - name: Run tests
-      run: go test ./...
-      env:
-        TEST_ETH_RPC_URL: "https://eth.public-rpc.com"
+      - name: Run tests
+        run: go test ./...
+        env:
+          TEST_ETH_RPC_URL: ${{ secrets.TEST_ETH_RPC_URL }}
 
-    - name: Create GitHub App Token
-      uses: actions/create-github-app-token@v1
-      id: app-token
-      with:
-        app-id: ${{ vars.APP_ID }}
-        private-key: ${{ secrets.PRIVATE_KEY }}
+      - name: Create GitHub App Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.PRIVATE_KEY }}
 
-    - name: Calculate next version tag
-      id: nextver
-      uses: mathieudutour/github-tag-action@v5.6
-      with:
-        github_token: ${{ steps.app-token.outputs.token }}
-        default_bump: minor
+      - name: Calculate next version tag
+        id: nextver
+        uses: mathieudutour/github-tag-action@v5.6
+        with:
+          github_token: ${{ steps.app-token.outputs.token }}
+          default_bump: minor
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-      with:
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+        with:
           tag_name: ${{ steps.nextver.outputs.new_tag }}
           release_name: Release ${{ steps.nextver.outputs.new_tag }}
+
