--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
         run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic
         env:
           TEST_ETH_RPC_URL: ${{ secrets.TEST_ETH_RPC_URL }}
+          TEST_BSC_RPC_URL: ${{ secrets.TEST_BSC_RPC_URL }}
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
@@ -34,4 +35,3 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: true
           verbose: true
-
