--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,14 @@ jobs:
         with:
           github_token: ${{ steps.app-token.outputs.token }}
           default_bump: minor
-
+      
+      - name: Generate release notes
+        id: generate-notes
+        run: |
+          echo "Release notes for version ${{ steps.nextver.outputs.new_tag }}" > changelog.txt
+          git log $(git describe --tags --abbrev=0)..HEAD --oneline >> changelog.txt
+          echo "::set-output name=changelog::$(<changelog.txt)"
+      
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -51,3 +58,12 @@ jobs:
           tag_name: ${{ steps.nextver.outputs.new_tag }}
           release_name: Release ${{ steps.nextver.outputs.new_tag }}
 
+      - name: Update README.md
+        run: |
+            NEW_LINE="| ${{ steps.nextver.outputs.new_tag }} | [Release notes](https://github.com/blndgs/protocol_registry/releases/tag/${{ steps.nextver.outputs.new_tag }}) |"
+            sed -i "s/^| Version | Release Notes |$/| Version | Release Notes |\n$NEW_LINE/" README.md
+            git config --global user.name 'github-actions'
+            git config --global user.email 'github-actions@github.com'
+            git add README.md
+            git commit -m "Update README.md with release ${{ steps.nextver.outputs.new_tag }}"
+            git push
