--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,13 +9,13 @@ on:
 
 jobs:
   build-test-and-release:
-    name: Test
+    name: Test and Release
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code into the Go module directory
+      - name: Check out code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # fetch tags
+          fetch-depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -36,41 +36,36 @@ jobs:
           private-key: ${{ secrets.PRIVATE_KEY }}
 
       - name: Calculate next version tag
-        id: nextver
-        uses: mathieudutour/github-tag-action@v5.6
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ steps.app-token.outputs.token }}
-          default_bump: minor
+          default_bump: patch
+          release_branches: main,test,live
 
-      - name: Generate release notes
-        id: generate-notes
-        run: |
-          echo "Release notes for version ${{ steps.nextver.outputs.new_tag }}" > changelog.txt
-          git log "$(git describe --tags --abbrev=0)..HEAD" --pretty=format:"%h %s" >> changelog.txt
-          CHANGELOG=$(cat changelog.txt)
-          CHANGELOG="${CHANGELOG//'%'/'%25'}"
-          CHANGELOG="${CHANGELOG//$'\n'/'%0A'}"
-          CHANGELOG="${CHANGELOG//$'\r'/'%0D'}"
-          echo "changelog=$CHANGELOG" >> $GITHUB_OUTPUT
+      - name: Generate changelog
+        id: changelog
+        uses: metcalfc/changelog-generator@v4.0.1
+        with:
+          myToken: ${{ steps.app-token.outputs.token }}
 
       - name: Create Release
-        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
         with:
-          tag_name: ${{ steps.nextver.outputs.new_tag }}
-          release_name: Release ${{ steps.nextver.outputs.new_tag }}
-          body: ${{ steps.generate-notes.outputs.changelog }}
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.changelog.outputs.changelog }}
 
       - name: Update README.md
-        run: |
-          NEW_LINE="| ${{ steps.nextver.outputs.new_tag }} | [Release notes](https://github.com/blndgs/protocol_registry/releases/tag/${{ steps.nextver.outputs.new_tag }}) |"
-          sed -i "s/^| Version | Release Notes |$/| Version | Release Notes |\n$NEW_LINE/" README.md
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git add README.md
-          git commit -m "Update README.md with release ${{ steps.nextver.outputs.new_tag }}"
-          git push
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: |
+          NEW_LINE="| ${{ steps.tag_version.outputs.new_tag }} | [Release notes](https://github.com/${{ github.repository }}/releases/tag/${{ steps.tag_version.outputs.new_tag }}) |"
+          sed -i "/^| Version | Release Notes |$/a $NEW_LINE" README.md
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add README.md
+          git commit -m "Update README.md with release ${{ steps.tag_version.outputs.new_tag }}"
+          git push
