fix: readme update for the next version release

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,25 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: true
           verbose: true
+      
+      - name: Calculate next version tag
+        id: nextver
+        uses: mathieudutour/github-tag-action@v5.6
+        with:
+          github_token: ${{ steps.app-token.outputs.token }}
+          default_bump: minor
+      
+      - name: Update README.md
+        run: |
+              NEW_LINE="| ${{ steps.nextver.outputs.new_tag }} | [Release notes](https://github.com/blndgs/protocol_registry/releases/tag/${{ steps.nextver.outputs.new_tag }}) |"
+              sed -i '1,/^| Version | Release Notes |$/ {
+                /^| Version | Release Notes |$/ a\
+                '"$NEW_LINE"'
+              }' README.md
+              git config --global user.name 'github-actions'
+              git config --global user.email 'github-actions@github.com'
+              git add README.md
+              git commit -m "Update README.md with release ${{ steps.nextver.outputs.new_tag }}"
+              git push
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
