--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,30 +1,25 @@
-codecov:
-  branch: main
-
 coverage:
+  precision: 2
+  round: down
+  range: 20...100
+
+
   status:
+    # Learn more at https://docs.codecov.io/docs/commit-status
     project:
       default:
         target: auto
-        threshold: 1%
+        threshold: 0.5% # allow this much decrease on project
+        base: auto
         if_ci_failed: error
-        only_pulls: false
-        paths:
-          - "src/"
-    patch:
-      default:
-        target: auto
-        threshold: 1%
-        if_ci_failed: error
-        only_pulls: true
-        
-comment:                  # this is a top-level key
-  layout: " diff, flags, files"
-  behavior: default
-  require_changes: false  # learn more in the Requiring Changes section below
-  require_base: false        # [true :: must have a base report to post]
-  require_head: true       # [true :: must have a head report to post]
-  hide_project_coverage: false # [true :: only show coverage on the git diff]
+        if_not_found: success
+    changes: false
+
+
+comment:
+  layout: "reach, diff, files"
+  behavior: default # update if exists else create new
+  require_changes: false
 
 ignore:
   # ignore all files of these types
